--- a/member.html
+++ b/member.html
@@ -43,6 +43,7 @@
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
           <p>新入生。webデザイナーになるのが夢。</p>
+          <p>趣味は野球観戦</p>
       </div>
     </div>
 
